# pedal_receiver

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: bom.ods
doc/guidance_materials/: device.xml  sample.xml  service.xml
doc/pedal_receiver/: .gitignore  00_extension.kicad_sym  TP4056_USB-C_Module_4Pin.kicad_mod  fp-lib-table  pedal_receiver.kicad_pcb  pedal_receiver.kicad_prl  pedal_receiver.kicad_pro  pedal_receiver.kicad_sch  sym-lib-table
doc/pedal_receiver/00_footprint.pretty/: DA14531mod.kicad_mod  JST_ZH_B2B-ZR_1x02_P1.50mm_Vertical.kicad_mod  SW_SLIDE_2.54mm_SS_12D01G3.kicad_mod  TP4056_USB-C_Module.kicad_mod  arm_swd_2x5_jtag_connector.kicad_mod  tps63000mod.kicad_mod
src/: main.c  v_common.h  v_ipc.c  v_ipc.h  v_log.c  v_log.h
